--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
 		<title>Ololo</title>
 	</head>
 	<body>
-		<button onclick="playtest();">Хочу смотреть Tears Of Steel по VLC не качая!</button>
+		<button onclick="opentorrent('./test.torrent');">Хочу смотреть Tears Of Steel по VLC не качая!</button>
 		<br>
 		<button onclick="openfile();">Дайте мне самому выбрать торрент!</button>
 		<input id="open" type="file" style="display:none"/>
