Separated torrent and player

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
 			
 		</div>
 		<script src="../js/vendor/jquery-2.1.0.min.js"></script>
-		<script src="../js/index.js"></script>
+		<script src="../js/torrent.js"></script>
+		<script src="../js/player.js"></script>
 	</body>
 </html>
