--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
 <html lang="ru">
 	<head>
-    	<meta charset="utf-8"> 
-		<title>Ololo</title>
+    	<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>thermorrent</title>
+		<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="../css/index.css" rel="stylesheet">
 	</head>
 	<body>
+		<!--FRAME -->
+		<div class="navbar navbar-default navbar-fixed-top" id="frame" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">thermorrent</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="#">Home</a></li>
+						<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Action</a></li>
+							<li class="divider"></li>
+							<li class="dropdown-header">Nav header</li>
+							<li><a href="#">Separated link</a></li>
+						</ul>
+						</li>
+					</ul>
+					<div class="nav navbar-nav navbar-right">
+						<button type="button" id="frame-btn-min" class="btn btn-success btn-sm navbar-btn"><span class="glyphicon glyphicon-chevron-down"></span></button>
+						<button type="button" id="frame-btn-close" class="btn btn-danger btn-sm navbar-btn"><span class="glyphicon glyphicon-remove"></span></button>
+					</div>
+				</div><!--/.nav-collapse -->
+			</div>
+		</div>
+		<!--/.FRAME -->
+
 		<input id="usevlc" type="checkbox" checked = "checked"> Использовать VLC
 		<br>
 		<button onclick="opentorrent('./test.torrent');">Хочу смотреть Tears Of Steel по VLC не качая!</button>
@@ -22,6 +60,8 @@
 			
 		</div>
 		<script src="../js/vendor/jquery-2.1.0.min.js"></script>
+		<script src="../bootstrap/js/bootstrap.min.js"></script>
+		<script src="../js/frame.js"></script>
 		<script src="../js/index.js"></script>
 		<script src="../js/torrent.js"></script>
 		<script src="../js/player.js"></script>
