--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,8 @@
 		</div>
 		<!--/.FRAME -->
 		<!--BODY -->
-		<div id="choosesource"class="container">
+			<!--Source -->
+		<div id="choosesource" class="container">
 			<div class="page-header">
 				<h1 class="text-center">Источник потока:</h1>
 			</div>
@@ -79,11 +80,28 @@
 				</div>
 			</div>
 		</div>
-		<div id="loadandplay"class="container">
-			<div>
-				<input id="usevlc" type="checkbox" checked = "checked"> Использовать VLC
-				<button onclick="stopengine();">Выключить</button>
+			<!--Play -->
+		<div id="loadandplay" style="display: none;" class="container">
+			<h3 class="text-center">Настройки:</h1>
+			<div class="row">
+				<div class="col-xs-4 text-center" id="vlccheck">
+					<label>
+						<input id="usevlc" type="checkbox" checked = "checked">
+						<span data-toggle="tooltip" data-placement="top" title="Когда скачаются первые 0.5% файла">Запустить VLC</span>
+					</label>
+				</div>
+				<div class="col-xs-4 text-center" id="vlcbutton" style="display: none;">
+					<button id="usevlc" type="button" class="btn btn-success btn-large btn-block" onclick="startvlc(VLC_HREF)"><span class="glyphicon glyphicon-play"></span>Запустить VLC</button>
+				</div>		
+				<div class="col-xs-8">
+					<div class="progress progress-striped active">
+						<div class="progress-bar" id="vlcbar"  role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+						</div>
+					</div>				
+				</div>
 			</div>
+			<h3 class="text-center">Статистика:</h1>
+			<button onclick="stopengine();">Выключить</button>	
 			<div id="progress">
 				
 			</div>
