--- a/html/index.html
+++ b/html/index.html
@@ -91,7 +91,7 @@
 					</label>
 				</div>
 				<div class="col-xs-4 text-center" id="vlcbutton" style="display: none;">
-					<button id="usevlc" type="button" class="btn btn-success btn-large btn-block" onclick="startvlc(VLC_HREF)"><span class="glyphicon glyphicon-play"></span>Запустить VLC</button>
+					<button id="usevlc" type="button" class="btn btn-success btn-large btn-block" onclick="startvlc(VLC_HREF)"><span class="glyphicon glyphicon-play"></span> Запустить VLC</button>
 				</div>		
 				<div class="col-xs-8">
 					<div class="progress progress-striped active">
@@ -101,6 +101,10 @@
 				</div>
 			</div>
 			<h3 class="text-center">Статистика:</h1>
+			<div class="progress progress-striped active">
+				<div class="progress-bar" id="vlcbar"  role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+				</div>
+			</div>	
 			<button onclick="stopengine();">Выключить</button>	
 			<div id="progress">
 				
