--- a/html/index.html
+++ b/html/index.html
@@ -22,18 +22,10 @@
 					<a class="navbar-brand">thermorrent</a>
 				</div>
 				<div class="navbar-collapse collapse">
-					<!--<ul class="nav navbar-nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
-							<li class="divider"></li>
-							<li class="dropdown-header">Nav header</li>
-							<li><a href="#">Separated link</a></li>
-						</ul>
-						</li>
-					</ul>-->
+					<ul class="nav navbar-nav">
+						<li><button type="button" id="frame-btn-stat" class="btn btn-warning navbar-btn">Стриминг не запущен</button></li>
+						<li><button type="button" id="frame-btn-switch" style="display: none;" onclick="stopengine();" class="btn btn-danger navbar-btn"><span class="glyphicon glyphicon-off"></span> Выключить</button></li>	
+					</ul>
 					<div class="nav navbar-nav navbar-right">
 						<button type="button" id="frame-btn-min" class="btn btn-success btn-sm navbar-btn"><span class="glyphicon glyphicon-chevron-down"></span></button>
 						<button type="button" id="frame-btn-close" class="btn btn-danger btn-sm navbar-btn"><span class="glyphicon glyphicon-remove"></span></button>
@@ -82,36 +74,63 @@
 		</div>
 			<!--Play -->
 		<div id="loadandplay" style="display: none;" class="container">
-			<h3 class="text-center">Настройки:</h1>
+			<h4 class="text-center">Прогресс:</h1>
 			<div class="row">
-				<div class="col-xs-4 text-center" id="vlccheck">
+				<div class="col-xs-6 text-center" id="vlccheck">
 					<label>
-						<input id="usevlc" type="checkbox" checked = "checked">
-						<span data-toggle="tooltip" data-placement="top" title="Когда скачаются первые 0.5% файла">Запустить VLC</span>
+					<input id="usevlc" type="checkbox" checked = "checked">
+					<span data-toggle="tooltip" data-placement="top" title="Когда скачаются первые 0.5% файла">Запустить VLC</span>
 					</label>
 				</div>
-				<div class="col-xs-4 text-center" id="vlcbutton" style="display: none;">
-					<button id="usevlc" type="button" class="btn btn-success btn-large btn-block" onclick="startvlc(VLC_HREF)"><span class="glyphicon glyphicon-play"></span> Запустить VLC</button>
-				</div>		
-				<div class="col-xs-8">
+				<div class="col-xs-6 text-center" id="vlcbutton" style="display: none;">
+					<button id="usevlc" type="button" class="btn btn-success btn-sm" onclick="startvlc(VLC_HREF)"><span class="glyphicon glyphicon-play"></span> Запустить VLC</button>
+				</div>	
+				<div class="col-xs-6">
 					<div class="progress progress-striped active">
-						<div class="progress-bar" id="vlcbar"  role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+						<div class="progress-bar" id="vlcbar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
 						</div>
-					</div>				
+					</div>	
 				</div>
 			</div>
-			<h3 class="text-center">Статистика:</h1>
-			<div class="progress progress-striped active">
-				<div class="progress-bar" id="vlcbar"  role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-				</div>
-			</div>	
-			<button onclick="stopengine();">Выключить</button>	
-			<div id="progress">
-				
-			</div>
-			<div id="progress2">
-				
-			</div>
+			<div class="page-header" id="magnetstat" style="display: none;">
+				<h3 class="text-center">Получаем метаданные от <span id="magnetstatmeta">0</span> пиров</h3>
+			</div>			
+			<table class="table table-hover text-center" id="stattable" style="display: none;">
+				<tbody id="statswitch">
+				<tr>
+					<td colspan="2">
+						<button type="button" class="btn btn-info" onclick="$('#stattbody').toggle('fast');">Дополнительная информация</button>
+					</td>
+				</tr>
+				</tbody>
+				<tbody id="stattbody" style="display: none;">
+				<tr>
+					<td>Скачано <span id="statalreadydownfile">0 MB</span> из <span id="stattotalfile">0 MB</span></td>
+					<td>
+						<div class="progress progress-striped active">
+							<div class="progress-bar progress progress-bar-success" id="statfilebar"  role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+							</div>
+						</div>						
+					</td>
+				</tr>
+				<tr>
+					<td>Ссылка для плеера</td>
+					<td id="stathref">Загружается</td>
+				</tr>
+				<tr>
+					<td>Имя файла</td>
+					<td id="statfilename">Загружается</td>
+				</tr>
+				<tr>
+					<td>Скорость</td>
+					<td id="statspeed">0 б/с</td>
+				</tr>
+				<tr>
+					<td>Пиры</td>
+					<td id="statpeers">0/0</td>
+				</tr>
+				</tbody>
+			</table>
 		</div>
 		<!--/.BODY -->
 		<script src="../js/vendor/jquery-2.1.0.min.js"></script>
