add link to second file

--- a/html/index.html
+++ b/html/index.html
@@ -71,6 +71,12 @@
 					</div>
 				</div>
 			</div>
+			<div id="catalogue" class="row" style="display: none;">
+				<br>
+				<div class="col-xs-6  col-xs-offset-3">
+					<button class="btn btn-primary btn-large btn-block" onclick="window.location.assign('catalog.html');"><span class="glyphicon glyphicon-th-list"></span> Каталог rutracker.org</button>
+				</div>
+			</div>
 		</div>
 			<!--Play -->
 		<div id="loadandplay" style="display: none;" class="container">
