--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>thermorrent</title>
-		<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="../bootstrap/css/bootstrap.cerulean.min.css" rel="stylesheet">
 		<link href="../css/index.css" rel="stylesheet">
 	</head>
 	<body>
@@ -74,7 +74,7 @@
 			<div id="catalogue" class="row" style="display: none;">
 				<br>
 				<div class="col-xs-6  col-xs-offset-3">
-					<button class="btn btn-primary btn-large btn-block" onclick="window.location.assign('catalog.html');"><span class="glyphicon glyphicon-th-list"></span> Каталог rutracker.org</button>
+					<button class="btn btn-primary btn-large btn-block" onclick="window.location.assign('catalogue.html');"><span class="glyphicon glyphicon-th-list"></span> Каталог rutracker.org</button>
 				</div>
 			</div>
 		</div>
