Fix if cerulean is default

--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li><button type="button" id="frame-btn-stat" class="btn btn-warning navbar-btn">Стриминг не запущен</button></li>
+						<li><button type="button" id="frame-btn-stat" class="btn btn-default navbar-btn">Стриминг не запущен</button></li>
 						<li><button type="button" id="frame-btn-switch" style="display: none;" onclick="stopengine();" class="btn btn-danger navbar-btn"><span class="glyphicon glyphicon-off"></span> Выключить</button></li>	
 					</ul>
 					<div class="nav navbar-nav navbar-right">
