--- a/html/index.html
+++ b/html/index.html
@@ -138,12 +138,12 @@
 				</tbody>
 			</table>
 		</div>
-		<div class="modal fade" id="switchFileModal" tabindex="-1" role="dialog" aria-labelledby="switchFileModalLabel" aria-hidden="true">
+		<div class="modal fade" id="switchTorrentModal" tabindex="-1" role="dialog" aria-labelledby="switchTorrentModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						<h4 class="modal-title" id="switchFileModalLabel">Стриминг уже идёт</h4>
+						<h4 class="modal-title" id="switchTorrentModalLabel">Стриминг уже идёт</h4>
 					</div>
 					<div class="modal-body">
 						<p>Открыть другой файл вместо запущенного?</p>
