--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>thermorrent</title>
-		<link href="../bootstrap/css/bootstrap.cerulean.min.css" rel="stylesheet">
+		<link href="../bootstrap/css/cerulean/bootstrap.min.css" rel="stylesheet">
 		<link href="../css/index.css" rel="stylesheet">
 	</head>
 	<body>
